# tovarisch

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  catch.cmake  cpp.hint  simde.cmake  stb.cmake
app/: CMakeLists.txt
app/shaders/: colour.frag.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  gbuffer_debug_albedo.frag.glsl  gbuffer_lighting.frag.glsl  pass_through.frag.glsl  pass_through.vert.glsl  simple.frag.glsl  skybox.frag.glsl  skybox.vert.glsl  texture.frag.glsl  vertex.vert.glsl
app/src/: app.cpp
player/: CMakeLists.txt  player.cpp  player.h
player/public/: index.html  index.html.backup  player.data  player.js  player.wasm
player/shaders/: colour.frag.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  gbuffer_lighting.frag.glsl  pass_through.frag.glsl  pass_through.vert.glsl  simple.frag.glsl  skybox.frag.glsl  skybox.vert.glsl  texture.frag.glsl  vertex.vert.glsl
projects/gear/: CMakeLists.txt
projects/gear/include/tov/gear/: freelist.h
projects/gear/src/gear/: freelist.cpp
projects/math/: CMakeLists.txt
projects/math/include/tov/math/: degree.h  math_core.h  matrix.h  matrix_component.h  plane.h  quaternion.h  radian.h  simd.h  trigonometry.h  vector.h  vector_component.h
projects/math/src/math/: degree.cpp  plane.cpp  quaternion.cpp  radian.cpp
projects/math/tests/: CMakeLists.txt  catch.cpp  degree.cpp  degree_tests.cpp  matrix.cpp  matrix_tests.cpp  quaternion.cpp  quaternion_tests.cpp  radian.cpp  radian_tests.cpp  test.cpp  test_helper.h  vector.cpp  vector_tests.cpp
projects/math/tests/tests/: degree_tests.cpp  matrix_tests.cpp  quaternion_tests.cpp  radian_tests.cpp  vector_tests.cpp
projects/memory/: CMakeLists.txt
projects/memory/include/tov/: memory.h  memory_config.h
projects/memory/include/tov/memory/: allocated_object.h  allocator.h  bounds_check_exception.h  bounds_signer.h  container.h  heap_area.h  heap_area.inl  memory_accessor.h  memory_arena.h  memory_arena.inl  memsize.h
projects/memory/tests/: CMakeLists.txt  bounds_signer.cpp  bounds_signer_tests.cpp  catch.cpp  dummy_allocation_policy.h  heap_area.cpp  heap_area_tests.cpp  memory_accessor.cpp  memory_accessor_tests.cpp  memory_arena.cpp  memory_arena_tests.cpp  test_helper.h
projects/memory/tests/policies/alignment/: standard.cpp  standard_tests.cpp
projects/memory/tests/policies/allocation/: linear.cpp  linear_tests.cpp  new_delete.cpp  new_delete_tests.cpp
projects/memory/tests/policies/bounds/: none.cpp  none_tests.cpp  simple.cpp  simple_tests.cpp
projects/memory/tests/tests/: allocated_object_tests.cpp  bounds_signer_tests.cpp  container_tests.cpp  heap_area_tests.cpp  memory_accessor_tests.cpp  memory_arena_tests.cpp  typed_memory_arena_tests.cpp
projects/memory/tests/util/: dummy_allocation_policy.h  dummy_fixed_allocation_policy.h  dummy_null_allocation_policy.h  dummy_thread_policy.h
projects/render_system_gl/: CMakeLists.txt
projects/render_system_gl/include/tov/render_system_gl/: render_system_gl.h
projects/render_system_gl/src/: thing.cpp
projects/render_system_gl_es/: CMakeLists.txt
projects/render_system_gl_es/include/tov/: render_system_gl_es.h
projects/render_system_gl_es/src/: thing.cpp
projects/rendering/: CMakeLists.txt
projects/rendering/_platforms/web/: CMakeLists.txt
projects/rendering/_platforms/win32/: CMakeLists.txt
projects/rendering/include/tov/rendering/: app.h  app.inl  backend.h  backend_dispatch.h  camera.h  colour.h  component.h  definitions.h  device_context.h  draw_context.h  entity.h  image.h  material.h  material_instance.h  mesh_component.h  pixel_format.h  render_context.h  render_system.h  render_system.inl  render_target.h  render_target.inl  render_target_manager.h  render_window.h  render_window.inl  rendering_core.h  scene.h  scene_node.h  scene_object.h  transform.h  view_frustum.h  view_frustum.inl  viewport.h  viewport.inl  viewport_factory.h  window.h  window_factory.h  window_platform_component.h  window_platform_support.h  window_renderer_component.h  window_renderer_support.h
projects/rendering/src/rendering/: backend_dispatch.cpp  camera.cpp  colour.cpp  entity.cpp  image.cpp  material.cpp  material_instance.cpp  mesh_component.cpp  pixel_format.cpp  render_system.cpp  render_target.cpp  render_target_manager.cpp  render_window.cpp  scene.cpp  scene_node.cpp  scene_object.cpp  transform.cpp  view_frustum.cpp  viewport.cpp  window.cpp  window_factory.cpp  window_platform_component.cpp  window_renderer_component.cpp
projects/rendering/src/rendering/buffers/: buffer.cpp  buffer_manager.cpp  buffer_object.cpp  buffer_object_manager.cpp  vertex_attribute.cpp  vertex_buffer_format.cpp  vertex_data.cpp  vertex_format.cpp
projects/rendering/src/rendering/commands/: command_dispatch.cpp
projects/rendering/src/rendering/geometry/: cuboid.cpp  rectangle.cpp  sphere.cpp  triangle.cpp
projects/rendering/src/rendering/mesh/: index_data.cpp  mesh.cpp  mesh_instance.cpp  mesh_manager.cpp  submesh.cpp  submesh_instance.cpp  vertex_data.cpp  vertex_data_format.cpp
projects/rendering/src/rendering/node/: node.cpp
projects/rendering/src/rendering/pipeline/: constant_definition.cpp  cpu_buffer.cpp  framebuffer.cpp  pipeline_state_descriptor.cpp  pipeline_state_object.cpp  program.cpp  (+2 more)
projects/rendering/tests/: CMakeLists.txt  test_helper.h  transform.cpp  transform_tests.cpp
projects/rendering/tests/buffers/: buffer_accessor_tests.cpp  buffer_object_tests.cpp  buffer_test_helper.h  buffer_tests.cpp
projects/rendering/tests/producers/: dependency_node_tests.cpp
projects/rendering/tests/tests/: transform_tests.cpp
projects/rendering_gl/: CMakeLists.txt  glew.cmake
projects/rendering_gl/_platforms/web/: CMakeLists.txt
projects/rendering_gl/_platforms/win32/: CMakeLists.txt
projects/rendering_gl/src/rendering_gl/: backend.cpp  render_system.cpp  viewport.cpp
projects/rendering_gles/: CMakeLists.txt
projects/rendering_gles/src/rendering_gles/: render_system_gles.cpp  viewport.cpp  viewport_factory.cpp  window_renderer_component.cpp  window_renderer_support.cpp
(+216 files in other folders)
